# remote-run

./: .gitignore  README.md  pyproject.toml
src/remote_run/: __init__.py  cli.py  config.py  remote.py  sync.py
tests/: test_cli.py  test_config.py  test_remote.py  test_sync.py
