[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "remote-run"
version = "0.1.0"
description = "Lightweight local-to-remote experiment runner for GPU servers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "remote-run contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
rrun = "remote_run.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
